[package]
name = "opf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
colored = "2.0.0"
reedline = { version = "0.12" }
crossterm = "*"
opf = {path = "../opf", version = "0.1.0"}