[package]
name = "opf-db"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
opf-models = { version = "1.0.0", path = "../opf-models" }
log = "0.4.17"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
uuid = "1.3.1"
chrono = "0.4.24"
rand = "0.8.5"
petgraph = "0.6.3"