[package]
name = "opf-models"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.40"
serde = { version = "1.0.145", features = ["derive"] }
uuid = "1.3.1"
nom = "7.0"