[package]
name = "opf-modules"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
opf-models = { version = "1.0.0", path = "../opf-models" }
log = "0.4.17"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
uuid = "1.3.1"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rlua = "0.19.4"
scraper = "0.15.0"
dyn-clone = "1.0.11"
async-trait = "0.1.68"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"]}
futures = "0.3.28"