[package]
name = "opf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.34"
comfy-table = "6.1.0"
scraper = "0.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
nom = "7.0"
rlua = "0.19.4"
petgraph = "0.6.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
regex = "1"
addr = "0.15.6"
dns-lookup = "1.0.8"
clap = "3.2.20"
colored = "2.0.0"
reedline = { version = "0.12" }
crossterm = "*"
rocket = { version = "=0.5.0-rc.2", features = ["json"]}
rocket_codegen = { version = "=0.5.0-rc.2" }
rocket_http = { version = "=0.5.0-rc.2"}
serde_derive = "1.0"
